--- a/html/contact.html
+++ b/html/contact.html
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="../css/html5reset.css">
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Icons  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Contact</title>
@@ -90,11 +89,8 @@
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205;</a>
         </div>
 
-        <div class="navLinks">
-            <a href="../index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="interests.html">Interests</a>
-        </div>
+        <a class="back-to-top" href="#nav">Back to Top &#8593;</a>
+
     </footer>
 </body>
 </html>
