--- a/html/projects.html
+++ b/html/projects.html
@@ -28,7 +28,6 @@
     <link rel="stylesheet" href="../css/html5reset.css">
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Icons  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Projects</title>
@@ -39,7 +38,7 @@
         <div class="skip">
             <a href="#projectsMain">Skip to Main Content</a>
         </div>
-        <nav class="navBar">
+        <nav class="navBar" id="nav">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205;</i>
@@ -59,12 +58,11 @@
         <div class="projects">
             <div class="projectItems">
                 <p class="projectTitle">Asteroid Game</p>
-                <img src="../images/asteroids.PNG" alt="Asteroids Game">
+                <img src="../images/asteroids-game.png" alt="Asteroids Game">
                 <div class="tabletTabView">
-                    <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a data-toggle="tab" role="tab"
-                                href="#description1">Description</a></li>
-                        <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame1">Time Frame</a></li>
+                    <ul class="nav nav-tabs" role="list">
+                        <li class="active" role="listitem"><a data-toggle="tab" href="#description1">Description</a></li>
+                        <li role="listitem"><a data-toggle="tab" href="#timeFrame1">Time Frame</a></li>
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description1" class="tab-pane fade in active">
@@ -91,10 +89,10 @@
                 <p class="projectTitle">Tyler Technologies Internship</p>
                 <img src="../images/tylertech.jpg" alt="Tyler Technologies">
                 <div class="tabletTabView">
-                    <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a data-toggle="tab" role="tab"
+                    <ul class="nav nav-tabs" role="list">
+                        <li role="listitem" class="active"><a data-toggle="tab" 
                                 href="#description2">Description</a></li>
-                        <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame2">Time Frame</a></li>
+                        <li role="listitem"><a data-toggle="tab"  href="#timeFrame2">Time Frame</a></li>
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description2" class="tab-pane fade in active">
@@ -123,10 +121,10 @@
                 <p class="projectTitle">Artist Search</p>
                 <img src="../images/itunes.png" alt="Itunes">
                 <div class="tabletTabView">
-                    <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a data-toggle="tab" role="tab"
+                    <ul class="nav nav-tabs" role="list">
+                        <li role="listitem" class="active"><a data-toggle="tab" 
                                 href="#description3">Description</a></li>
-                        <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame3">Time Frame</a></li>
+                        <li role="listitem"><a data-toggle="tab"  href="#timeFrame3">Time Frame</a></li>
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description3" class="tab-pane fade in active">
@@ -153,10 +151,10 @@
                 <p class="projectTitle">Insta485</p>
                 <img src="../images/insta485.PNG" alt="insta485 Project">
                 <div class="tabletTabView">
-                    <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a data-toggle="tab" role="tab"
+                    <ul class="nav nav-tabs" role="list">
+                        <li role="listitem" class="active"><a data-toggle="tab" 
                                 href="#description4">Description</a></li>
-                        <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame4">Time Frame</a></li>
+                        <li role="listitem"><a data-toggle="tab"  href="#timeFrame4">Time Frame</a></li>
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description4" class="tab-pane fade in active">
@@ -183,10 +181,10 @@
                 <p class="projectTitle">Bank of America Internship</p>
                 <img src="../images/bofa.jpg" alt="Bank of America">
                 <div class="tabletTabView">
-                    <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a data-toggle="tab" role="tab"
+                    <ul class="nav nav-tabs" role="list">
+                        <li role="listitem" class="active"><a data-toggle="tab" 
                                 href="#description5">Description</a></li>
-                        <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame5">Time Frame</a></li>
+                        <li role="listitem"><a data-toggle="tab"  href="#timeFrame5">Time Frame</a></li>
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description5" class="tab-pane fade in active">
@@ -208,12 +206,12 @@
             </div>
             <div class="projectItems">
                 <p class="projectTitle">Ann Arbor Suzuki Institute</p>
-                <img src="../images/annarbor.PNG" alt="Ann Arbor Suzuki Institute">
+                <img src="../images/annarborsuzuki.png" alt="Ann Arbor Suzuki Institute">
                 <div class="tabletTabView">
-                    <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a data-toggle="tab" role="tab"
+                    <ul class="nav nav-tabs" role="list">
+                        <li role="listitem" class="active"><a data-toggle="tab" 
                                 href="#description6">Description</a></li>
-                        <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame6">Time Frame</a></li>
+                        <li role="listitem"><a data-toggle="tab"  href="#timeFrame6">Time Frame</a></li>
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description6" class="tab-pane fade in active">
@@ -238,12 +236,12 @@
             </div>
             <div class="projectItems">
                 <p class="projectTitle">Office Hours Queue</p>
-                <img src="../images/officehours.PNG" alt="Office Hours Queue">
+                <img src="../images/officehours.png" alt="Office Hours Queue">
                 <div class="tabletTabView">
-                    <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a data-toggle="tab" role="tab"
+                    <ul class="nav nav-tabs" role="list">
+                        <li role="listitem" class="active"><a data-toggle="tab" 
                                 href="#description7">Description</a></li>
-                        <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame7">Time Frame</a></li>
+                        <li role="listitem"><a data-toggle="tab"  href="#timeFrame7">Time Frame</a></li>
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description7" class="tab-pane fade in active">
@@ -270,10 +268,10 @@
                 <p class="projectTitle">Map Reduce</p>
                 <img src="../images/mapreduce.png" alt="Map Reduce Project">
                 <div class="tabletTabView">
-                    <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a data-toggle="tab" role="tab"
+                    <ul class="nav nav-tabs" role="list">
+                        <li role="listitem" class="active"><a data-toggle="tab" 
                                 href="#description8">Description</a></li>
-                        <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame8">Time Frame</a></li>
+                        <li role="listitem"><a data-toggle="tab"  href="#timeFrame8">Time Frame</a></li>
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description8" class="tab-pane fade in active">
@@ -299,10 +297,10 @@
                 <p class="projectTitle">Ask485</p>
                 <img src="../images/ask485.png" alt="Google Search Engine Replica">
                 <div class="tabletTabView">
-                    <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a data-toggle="tab" role="tab"
+                    <ul class="nav nav-tabs" role="list">
+                        <li role="listitem" class="active"><a data-toggle="tab" 
                                 href="#description9">Description</a></li>
-                        <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame9">Time Frame</a></li>
+                        <li role="listitem"><a data-toggle="tab" href="#timeFrame9">Time Frame</a></li>
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description9" class="tab-pane fade in active">
@@ -339,11 +337,7 @@
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205;</a>
         </div>
 
-        <div class="navLinks">
-            <a href="../index.html">Home</a>
-            <a href="interests.html">Interests</a>
-            <a href="contact.html">Contact</a>
-        </div>
+        <a class="back-to-top" href="#nav">Back to Top &#8593;</a>
     </footer>
 </body>
 </html>
