--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/styles.css">
     <!-- Icons  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +41,7 @@
     </div>
 
     <header>
-        <nav class="navBar">
+        <nav class="navBar" id="nav">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205;</i>
@@ -88,11 +87,11 @@
                         <div class="codingLanguage-front">
                             <img src="images/icons8-react-native-50.png" alt = "React Icon"/>
                         </div>
+                        <p class="reduceOn">React</p>
                         <div class="codingLanguage-back">
                             <p>React</p>
                         </div>
                     </div>
-                    
                 </div>
 
                 <div class="language" tabindex="0">
@@ -100,6 +99,7 @@
                         <div class="codingLanguage-front">
                             <img src="images/icons8-html-5-50.png" alt = "HTML Icon"/>
                         </div>
+                        <p class="reduceOn">HTML</p>
                         <div class="codingLanguage-back">
                             <p>HTML</p>
                         </div>
@@ -111,6 +111,7 @@
                         <div class="codingLanguage-front">
                             <img src="images/icons8-python-50.png" alt = "Python Icon"/>
                         </div>
+                        <p class="reduceOn">Python</p>
                         <div class="codingLanguage-back">
                             <p>Python</p>
                         </div>
@@ -122,6 +123,7 @@
                         <div class="codingLanguage-front">
                             <img src="images/icons8-c++-50.png" alt = "C++ Icon"/>
                         </div>
+                        <p class="reduceOn">C++</p>
                         <div class="codingLanguage-back">
                             <p>C++</p>
                         </div>
@@ -133,12 +135,14 @@
                         <div class="codingLanguage-front">
                             <img src="images/icons8-angularjs-50.png" alt = "AngularJS Icon"/>
                         </div>
+                        <p class="reduceOn">AngularJS</p>
                         <div class="codingLanguage-back">
                             <p>AngularJS</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
 
     <footer>
@@ -148,12 +152,7 @@
             <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205;</a>
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205;</a>
         </div>
-
-        <div class="navLinks">
-            <a href="html/interests.html">Interests</a>
-            <a href="html/projects.html">Projects</a>
-            <a href="html/contact.html">Contact</a>
-        </div>
+        <a class="back-to-top" href="#nav">Back to Top &#8593;</a>
     </footer>
 </body>
 
