--- a/html/interests.html
+++ b/html/interests.html
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="../css/html5reset.css">
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Icons  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Interests</title>
@@ -38,7 +37,7 @@
         <a href="#hobbiesMain">Skip to Main Content</a>
     </div>
     <header>
-        <nav class="navBar">
+        <nav class="navBar" id="nav">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205;</i>
@@ -59,7 +58,7 @@
         <div class="favSets1">
             <h2>Favorite Dogs </h2>
             <div class="image1">
-                <img src="../images/bigdoge.jpg" alt="Husky with Tongue out">
+                <img src="../images/alaskan-malamute.jpg" alt="Alaskan Malamute with Tongue out">
                 <div class="tempTitle">
                     <p>Alaskan Malamute </p>
                 </div>
@@ -92,10 +91,9 @@
                     <p>Thoughts:</p>
                     <p>Massive bear. Big fluffy doge.</p>
                 </div>
-
             </div>
             <div class="image2">
-                <img src="../images/doge.jpg" alt="Golden Retreiver">
+                <img src="../images/golden-retriever.jpg" alt="Happy Golden Retreiver">
                 <div class="tempTitle">
                     <p>Golden Retreiver</p>
                 </div>
@@ -167,7 +165,7 @@
         <div class="favSets2">
             <h2>Favorite Sports</h2>
             <div class="image1">
-                <img src="../images/block-m-feed.jpg" alt="Michigan Logo" id="michiganLogo">
+                <img src="../images/block-m-feed.jpg" alt="University of Michigan Logo" id="michiganLogo">
                 <div class="tempTitle">
                     <p>Michigan Sports</p>
                 </div>
@@ -203,7 +201,7 @@
                 </div>
             </div>
             <div class="image2">
-                <img src="../images/pistons.jpg" alt="Detroit Pistons" id="pistonsLogo">
+                <img src="../images/pistons.jpg" alt="Detroit Pistons Logo" id="pistonsLogo">
                 <div class="tempTitle">
                     <p>Deeeeeeeeeetroit Basketball</p>
                 </div>
@@ -240,7 +238,7 @@
                 </div>
             </div>
             <div class="image3">
-                <img src="../images/lions.jpg" alt="Detroit Lions" id="lionsLogo">
+                <img src="../images/lions.jpg" alt="Detroit Lions Logo" id="lionsLogo">
                 <div class="tempTitle">
                     <p>Detroit Lions </p>
                 </div>
@@ -278,7 +276,7 @@
         <div class="favSets3">
             <h2>Favorite Foods</h2>
             <div class="image1">
-                <img src="../images/pasta.jpeg" alt="I love pasta">
+                <img src="../images/pasta.jpeg" alt="Creamy rigatoni pasta dish">
                 <div class="tempTitle">
                     <p>Any Pasta</p>
                 </div>
@@ -354,14 +352,14 @@
                 </div>
             </div>
             <div class="image3">
-                <img src="../images/chicken.jpg" alt="Chicken Sandwich">
+                <img src="../images/chicken-sandwich.jpg" alt="Crispy Chicken Sandwich">
                 <div class="tempTitle">
                     <p>Chicken Sandwiches</p>
                 </div>
                 <div class="imageCaption"  >
                     <p>Chicken Sandwich</p>
                     <p>Rankings</p>
-                    <div class="dropdown"  >
+                    <div class="dropdown">
                         <button class="btn dropdown-toggle" type="button"   data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="true">
                             Rankings
@@ -400,11 +398,8 @@
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205;</a>
         </div>
 
-        <div class="navLinks">
-            <a href="../index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
-        </div>
+        <a class="back-to-top" href="#nav">Back to Top &#8593;</a>
+
     </footer>
 </body>
 </html>
