--- a/html/projects.html
+++ b/html/projects.html
@@ -57,7 +57,7 @@
     <main class="projectsContainer" id="projectsMain">
         <h1>Projects and Experiences</h1>
         <div class="projects">
-            <div class="projectItems">
+            <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Asteroid Game</p>
                 <img src="../images/asteroids-game.png" alt="Asteroids Game">
                 <div class="tabletTabView">
@@ -86,7 +86,7 @@
                 <p>Time Frame:</p>
                 <p>Completed: October 9th 2022</p>
             </div>
-            <div class="projectItems">
+            <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Tyler Technologies Internship</p>
                 <img src="../images/tylertech.jpg" alt="Tyler Technologies">
                 <div class="tabletTabView">
@@ -118,7 +118,7 @@
                 <p>May - August 2022</p>
             </div>
 
-            <div class="projectItems">
+            <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Artist Search</p>
                 <img src="../images/itunes.png" alt="Itunes">
                 <div class="tabletTabView">
@@ -148,7 +148,7 @@
                 <p>Time Frame:</p>
                 <p>Completed November 20th 2022</p>
             </div>
-            <div class="projectItems">
+            <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Insta485</p>
                 <img src="../images/insta485.PNG" alt="insta485 Project">
                 <div class="tabletTabView">
@@ -178,7 +178,7 @@
                 <p>Time Frame:</p>
                 <p>Completed October 16th 2022</p>
             </div>
-            <div class="projectItems">
+            <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Bank of America Internship</p>
                 <img src="../images/bofa.jpg" alt="Bank of America">
                 <div class="tabletTabView">
@@ -205,7 +205,7 @@
                 <p>Time Frame:</p>
                 <p>Start Date: June 2023 </p>
             </div>
-            <div class="projectItems">
+            <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Ann Arbor Suzuki Institute</p>
                 <img src="../images/annarborsuzuki.png" alt="Ann Arbor Suzuki Institute">
                 <div class="tabletTabView">
@@ -235,7 +235,7 @@
                 <p>Time Frame:</p>
                 <p>Completed April 2021</p>
             </div>
-            <div class="projectItems">
+            <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Office Hours Queue</p>
                 <img src="../images/officehours.png" alt="Office Hours Queue">
                 <div class="tabletTabView">
@@ -265,7 +265,7 @@
                 <p>Time Frame:</p>
                 <p>Completed: March 2021</p>
             </div>
-            <div class="projectItems">
+            <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Map Reduce</p>
                 <img src="../images/mapreduce.png" alt="Map Reduce Project">
                 <div class="tabletTabView">
@@ -294,7 +294,7 @@
                 <p>Time Frame:</p>
                 <p>Completed: October 9th 2022</p>
             </div>
-            <div class="projectItems">
+            <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Ask485</p>
                 <img src="../images/ask485.png" alt="Google Search Engine Replica">
                 <div class="tabletTabView">
