--- a/html/projects.html
+++ b/html/projects.html
@@ -88,7 +88,7 @@
             </div>
             <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Tyler Technologies Internship</p>
-                <img src="../images/tylertech.jpg" alt="Tyler Technologies">
+                <img src="../images/tylertech.jpg" alt="Tyler Technologies Logo">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs" role="list">
                         <li role="listitem" class="active"><a data-toggle="tab" 
@@ -120,7 +120,7 @@
 
             <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Artist Search</p>
-                <img src="../images/itunes.png" alt="Itunes">
+                <img src="../images/itunes.png" alt="Itunes Logo">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs" role="list">
                         <li role="listitem" class="active"><a data-toggle="tab" 
@@ -180,7 +180,7 @@
             </div>
             <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Bank of America Internship</p>
-                <img src="../images/bofa.jpg" alt="Bank of America">
+                <img src="../images/bofa.jpg" alt="Bank of America Logo">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs" role="list">
                         <li role="listitem" class="active"><a data-toggle="tab" 
@@ -207,7 +207,7 @@
             </div>
             <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Ann Arbor Suzuki Institute</p>
-                <img src="../images/annarborsuzuki.png" alt="Ann Arbor Suzuki Institute">
+                <img src="../images/annarborsuzuki.png" alt="Ann Arbor Suzuki Institute Website">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs" role="list">
                         <li role="listitem" class="active"><a data-toggle="tab" 
@@ -237,7 +237,7 @@
             </div>
             <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Office Hours Queue</p>
-                <img src="../images/officehours.png" alt="Office Hours Queue">
+                <img src="../images/officehours.png" alt="Office Hours Queue Website">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs" role="list">
                         <li role="listitem" class="active"><a data-toggle="tab" 
@@ -296,7 +296,7 @@
             </div>
             <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Ask485</p>
-                <img src="../images/ask485.png" alt="Google Search Engine Replica">
+                <img src="../images/ask485.png" alt="Google Search Engine Replica Project">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs" role="list">
                         <li role="listitem" class="active"><a data-toggle="tab" 
