--- a/html/interests.html
+++ b/html/interests.html
@@ -58,7 +58,7 @@
         <h1 id="interestsTag">Interests</h1>
         <div class="favSets1">
             <h2>Favorite Dogs </h2>
-            <div class="image1">
+            <div class="firstImage">
                 <img src="../images/alaskan-malamute.jpg" alt="Alaskan Malamute with Tongue out">
                 <div class="tempTitle">
                     <p>Alaskan Malamute </p>
@@ -93,7 +93,7 @@
                     <p>Massive bear. Big fluffy doge.</p>
                 </div>
             </div>
-            <div class="image2">
+            <div class="secondImage">
                 <img src="../images/golden-retriever.jpg" alt="Happy Golden Retreiver">
                 <div class="tempTitle">
                     <p>Golden Retreiver</p>
@@ -126,8 +126,8 @@
                     <p>Super happy doge.</p>
                 </div>
             </div>
-            <div class="image3">
-                <img src="../images/maya.png" alt="Maya the Polar Bear Samoyed">
+            <div class="thirdImage">
+                <img src="../images/samoyed.png" alt="Maya the Polar Bear Samoyed">
                 <div class="tempTitle">
                     <p>Samoyed </p>
                 </div>
@@ -165,8 +165,8 @@
 
         <div class="favSets2">
             <h2>Favorite Sports</h2>
-            <div class="image1">
-                <img src="../images/block-m-feed.jpg" alt="University of Michigan Logo" id="michiganLogo">
+            <div class="firstImage">
+                <img src="../images/umich-logo.jpg" alt="University of Michigan Logo" id="michiganLogo">
                 <div class="tempTitle">
                     <p>Michigan Sports</p>
                 </div>
@@ -201,7 +201,7 @@
                         and win championships. Ohio State sucks, we are beating TCU. Go Blue!</p>
                 </div>
             </div>
-            <div class="image2">
+            <div class="secondImage">
                 <img src="../images/pistons.jpg" alt="Detroit Pistons Logo" id="pistonsLogo">
                 <div class="tempTitle">
                     <p>Deeeeeeeeeetroit Basketball</p>
@@ -238,8 +238,8 @@
                         It still might take a few more years to get back into contention.</p>
                 </div>
             </div>
-            <div class="image3">
-                <img src="../images/lions.jpg" alt="Detroit Lions Logo" id="lionsLogo">
+            <div class="thirdImage">
+                <img src="../images/detroit-lions.jpg" alt="Detroit Lions Logo" id="lionsLogo">
                 <div class="tempTitle">
                     <p>Detroit Lions </p>
                 </div>
@@ -276,7 +276,7 @@
         </div>
         <div class="favSets3">
             <h2>Favorite Foods</h2>
-            <div class="image1">
+            <div class="firstImage">
                 <img src="../images/pasta.jpeg" alt="Creamy rigatoni pasta dish">
                 <div class="tempTitle">
                     <p>Any Pasta</p>
@@ -313,7 +313,7 @@
                     <p>Pretty much the only dish I can cook. College student friendly and delicious. </p>
                 </div>
             </div>
-            <div class="image2">
+            <div class="secondImage">
                 <img src="../images/salmon.jpg" alt="Crispy Salmon">
                 <div class="tempTitle">
                     <p>Salmon</p>
@@ -352,7 +352,7 @@
                         constantly smoge. </p>
                 </div>
             </div>
-            <div class="image3">
+            <div class="thirdImage">
                 <img src="../images/chicken-sandwich.jpg" alt="Crispy Chicken Sandwich">
                 <div class="tempTitle">
                     <p>Chicken Sandwiches</p>
