--- a/html/projects.html
+++ b/html/projects.html
@@ -150,7 +150,7 @@
             </div>
             <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Insta485</p>
-                <img src="../images/insta485.PNG" alt="insta485 Project">
+                <img src="../images/insta485.png" alt="insta485 Project">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs" role="list">
                         <li role="listitem" class="active"><a data-toggle="tab" 
@@ -180,7 +180,7 @@
             </div>
             <div class="projectItems" tabindex="0">
                 <p class="projectTitle">Bank of America Internship</p>
-                <img src="../images/bofa.jpg" alt="Bank of America Logo">
+                <img src="../images/bank-of-america.jpg" alt="Bank of America Logo">
                 <div class="tabletTabView">
                     <ul class="nav nav-tabs" role="list">
                         <li role="listitem" class="active"><a data-toggle="tab" 
